1.9.14.dev0
 * #409: With the PagerDuty monitoring hook, send borgmatic logs to PagerDuty so they show up in the
   incident UI. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#pagerduty-hook
 * #936: Clarify Zabbix monitoring hook documentation about creating items.

1.9.13
 * #975: Add a "compression" option to the PostgreSQL database hook.
 * #1001: Fix a ZFS error during snapshot cleanup.
 * #1003: In the Zabbix monitoring hook, support Zabbix 7.2's authentication changes.
 * #1009: Send database passwords to MariaDB and MySQL via anonymous pipe, which is more secure than
   using an environment variable.
 * #1013: Send database passwords to MongoDB via anonymous pipe, which is more secure than using
   "--password" on the command-line!
 * #1015: When ctrl-C is pressed, more strongly encourage Borg to actually exit.
 * Add a "verify_tls" option to the Uptime Kuma monitoring hook for disabling TLS verification.
 * Add "tls" options to the MariaDB and MySQL database hooks to enable or disable TLS encryption
   between client and server.

1.9.12
 * #1005: Fix the credential hooks to avoid using Python 3.12+ string features. Now borgmatic will
   work with Python 3.9, 3.10, and 3.11 again.

1.9.11
 * #795: Add credential loading from file, KeePassXC, and Docker/Podman secrets. See the
   documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/provide-your-passwords/
 * #996: Fix the "create" action to omit the repository label prefix from Borg's output when
   databases are enabled.
 * #998: Send the "encryption_passphrase" option to Borg via an anonymous pipe, which is more secure
   than using an environment variable.
 * #999: Fix a runtime directory error from a conflict between "extra_borg_options" and special file
   detection.
 * #1001: For the ZFS, Btrfs, and LVM hooks, only make snapshots for root patterns that come from